--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ dependencies {
 
     // location
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+
+    // permissions
+    implementation 'com.karumi:dexter:4.2.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
